Add framework native unit tests

--- a/ng-unit-testing/src/app/todo-app/components/todo-item/todo-item.component.html
+++ b/ng-unit-testing/src/app/todo-app/components/todo-item/todo-item.component.html
@@ -9,7 +9,7 @@
     </span>
   </div>
   <div>
-    <button (click)="onEdit.emit(todo)">Edit</button>
+    <button (click)="onEdit.emit(todo)" data-editbtn>Edit</button>
     <button (click)="onRemove.emit(todo)" class="remove-btn">Remove</button>
   </div>
 </div>
