Use http for todos. Testing http calls.

--- a/ng-unit-testing/src/app/todo-app/components/todo-app-container/todo-app-container.component.html
+++ b/ng-unit-testing/src/app/todo-app/components/todo-app-container/todo-app-container.component.html
@@ -4,6 +4,6 @@
   (onAdd)="todoService.onAdd()"
   (onCancelUpdate)="todoService.cancelUpdate()"
   (onEdit)="todoService.setChosenTodo($event)"
-  (onRemove)="todoService.remove($event)"
-  (onUpdate)="todoService.update($event)">
+  (onRemove)="handleDelete($event)"
+  (onUpdate)="handleUpdate($event)">
 </app-todo-app>
